--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -25,9 +31,77 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  color: #000;
+  font-family: sans-serif;
+  /* min-width: 320px;
+  min-height: 100vh; */
+  width: 100%;
+}
+
+header {
+  width: min(100%, 1440px);
+  padding: 1em 0;
+  /* border: 1px solid red; */
+}
+
+.nav-bar {
+  width: 95%;
+  margin: auto;
+  height: 40px;
+  padding: 1em 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* border: 1px solid green; */
+}
+
+.account-icon {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.search-image,
+.account-image,
+.notify-image,
+.arrow-image {
+  width: 24px;
+  height: 24px;
+}
+
+.search-icon {
+  border: none;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+}
+
+.menu,
+.arrow-down {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  gap: 1.3rem;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.logo-image {
+  width: 32px;
+  height: 32px;
+}
+
+#form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
 h1 {
@@ -36,18 +110,18 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
   text-align: center;
+  display: flex;
+  align-items: center;
 }
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
-}
+} */
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
@@ -55,12 +129,29 @@ h1 {
   filter: drop-shadow(0 0 2em #f7df1eaa);
 }
 
-.card {
+/* .card {
   padding: 2em;
-}
+} */
 
 .read-the-docs {
   color: #888;
+}
+
+#input-field {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  transition: border-color 0.25s;
+  outline: none;
+  padding: 1.1em;
+}
+
+#input-field:hover {
+  border-color: #646cff;
+}
+
+#input-field:focus,
+#input-field:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
 button {
@@ -74,12 +165,63 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+img {
+  width: 100%;
+}
+
+.movie-poster {
+  width: 100%;
+  object-fit: cover;
+}
+
+#hero-section {
+  width: 100%;
+}
+
+.dots {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+#overlay-main {
+  width: 100%;
+  display: flex;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+#posters {
+  width: 100%;
+  margin: 0;
+  position: relative;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @media (prefers-color-scheme: light) {
