--- a/src/style.css
+++ b/src/style.css
@@ -76,6 +76,8 @@ header {
   border-radius: 50%;
   display: flex;
   align-items: center;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .menu,
@@ -98,10 +100,17 @@ header {
 }
 
 #form {
+  width: 75%;
+  margin: auto;
+  border: 1px solid #fff;
+  border-radius: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  position: absolute;
+  top: 50%;
+  z-index: 1;
 }
 
 h1 {
@@ -113,6 +122,7 @@ h1 {
   width: 100%;
   text-align: center;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -129,17 +139,32 @@ h1 {
   filter: drop-shadow(0 0 2em #f7df1eaa);
 }
 
-/* .card {
-  padding: 2em;
-} */
+#watch-list,
+#favorites,
+#liked-movies {
+  width: 200px;
+  height: 300px;
+  margin: 8px;
+  background-color: #060606;
+  border: 1px solid #fff;
+  position: relative;
+}
+
+#overlay {
+  width: 100%;
+  background-color: #e8e4e4;
+  color: #fff;
+  position: absolute;
+  bottom: 50%;
+}
 
 .read-the-docs {
   color: #888;
 }
 
 #input-field {
-  border: 1px solid #fff;
-  border-radius: 4px;
+  border: none;
+  outline: none;
   transition: border-color 0.25s;
   outline: none;
   padding: 1.1em;
@@ -177,15 +202,14 @@ button:focus-visible {
 
 img {
   width: 100%;
-}
-
-.movie-poster {
-  width: 100%;
-  object-fit: cover;
+  z-index: -1;
 }
 
 #hero-section {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
 .dots {
@@ -211,11 +235,39 @@ img {
 
 #posters {
   width: 100%;
-  margin: 0;
-  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes fade {
+#poster-images {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  margin: 0;
+  position: relative;
+  background-color: #000000bf;
+}
+
+#movies {
+  display: flex;
+}
+
+#search-btn {
+  display: none;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid #e3e3e3;
+  padding: 0.5em;
+  border-radius: 24px;
+}
+
+.icon-bar {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+@keyframes movie-poster {
   from {
     opacity: 0.4;
   }
