--- a/src/main.css
+++ b/src/main.css
@@ -10,11 +10,6 @@
   outline: none;
 }
 
-.watchlist {
-  width: 24px;
-  height: 24px;
-}
-
 .hero-image,
 .hero-image-two,
 .hero-image-three,
@@ -26,8 +21,9 @@
 }
 
 .movies {
+  width: 40%;
+  padding: 4px;
   border-radius: 24px;
-  padding: 4px 10px;
   background-color: #000;
   color: #fff;
   border: none;
@@ -37,6 +33,50 @@
 .carousel-images {
   /* overflow: hidden; */
   width: 90%;
+  position: relative;
+}
+
+h2 {
+  color: #fff;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+.brand-logos {
+  width: 100%;
+  display: block;
+}
+
+.logo-slider {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.logos {
+  width: 5rem;
+  height: auto;
+}
+
+#cards {
+  width: 100%;
+  display: flex;
+}
+
+.paragraph-one {
+  width: 90%;
+  color: #f3f1f1e5;
+  font-weight: 200;
+  text-align: left;
+}
+
+.overlay-position {
+  position: absolute;
+  bottom: 85px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  padding: 0 2em;
 }
 
 .carousel {
@@ -81,7 +121,7 @@
   transform: translateY(-50%);
   border-radius: 50%;
   cursor: pointer;
-  z-index: 1001; /* Sit on top of everything */
+  z-index: 1001;
   border: 1px solid black;
 }
 .carousel-button-prev {
@@ -105,6 +145,63 @@
 .carousel-button-next::after {
   left: 47%;
   transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+footer {
+  width: 100%;
+  height: 40vh;
+  border: 1px solid #f3f1f1e5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: #fff;
+  font-size: 12px;
+  padding: 10px;
+}
+
+.unordered-list {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.links {
+  display: flex;
+  gap: 10px;
+}
+
+.footer-item-one {
+  width: 50%;
+  text-align: left;
+}
+
+.social-media-icon {
+  width: 24px;
+  height: 24px;
+}
+
+.footer-item-two {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin: 1rem 0;
+}
+
+.contact-footer {
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media (prefers-color-scheme: light) {
