--- a/src/main.css
+++ b/src/main.css
@@ -10,6 +10,11 @@
   outline: none;
 }
 
+.myFavorites {
+  display: flex;
+  width: 100%;
+}
+
 .hero-image,
 .hero-image-two,
 .hero-image-three,
@@ -30,16 +35,83 @@
   z-index: 1;
 }
 
+.week-popular {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
 .carousel-images {
   /* overflow: hidden; */
-  width: 90%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   position: relative;
+}
+
+.cattii-i {
+  display: flex;
+  gap: 10px;
+}
+
+.cattii-img img {
+  width: 100px;
+  border-radius: 15px;
+}
+
+.num {
+  padding-top: 18%;
+  font-size: 2rem;
+  font-weight: 800;
+  padding-right: 10px;
+}
+
+.cattii-t h4 {
+  margin-top: 10px;
+  font-size: 1rem;
+}
+
+.supp p {
+  margin-top: 10px;
+  font-weight: 300;
+  color: #ffffffa2;
+}
+
+.cattii-t p {
+  margin-top: 10px;
+}
+
+.pg {
+  padding: 10px;
+  border: 1px black solid;
+  width: 50px;
+  border-radius: 15px;
+}
+
+.third-catt {
+  display: flex;
+  gap: 1rem;
+  overflow: hidden;
+}
+
+.img-cattiv img {
+  width: 220px;
+  border-radius: 15px;
+  opacity: 0.7;
+}
+
+.just {
+  padding: 20px;
+  margin-top: 30px;
+  color: #40d761;
 }
 
 h2 {
   color: #fff;
   font-weight: 700;
   font-size: 1.2rem;
+  text-align: left;
 }
 
 .brand-logos {
@@ -51,6 +123,7 @@ h2 {
   display: flex;
   align-items: center;
   gap: 1rem;
+  margin: 32px 12px;
 }
 
 .logos {
@@ -71,8 +144,6 @@ h2 {
 }
 
 .overlay-position {
-  position: absolute;
-  bottom: 85px;
   display: flex;
   flex-direction: column;
   gap: 4px;
@@ -81,22 +152,28 @@ h2 {
 
 .carousel {
   transform-style: preserve-3d;
+  height: 100%;
 }
 
 .movie-poster {
   opacity: 0;
-  position: absolute;
   top: 0;
-  width: 100%;
+  width: 200px;
+  height: 200px;
   margin: auto;
   transition: transform 0.5s, opacity 0.5s, z-index 0.5s;
+}
+
+.movie-item {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
 
 .movie-poster.first-image,
 .movie-poster.active {
   opacity: 1;
   position: relative;
-  width: 100%;
   /* z-index: 900; */
 }
 
