--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@ body {
 }
 
 header {
-  width: min(100%, 1440px);
+  width: 100%;
   padding: 1em 0;
   /* border: 1px solid red; */
 }
@@ -94,21 +94,14 @@ header {
   gap: 4px;
 }
 
+.logo-name {
+  width: 80px;
+  height: 30px;
+}
+
 .logo-image {
   width: 32px;
   height: 32px;
-}
-
-#form {
-  width: 75%;
-  margin: auto;
-  border: 1px solid #fff;
-  border-radius: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  position: absolute;
 }
 
 h1 {
@@ -124,36 +117,45 @@ h1 {
   align-items: center;
 }
 
-/* .logo {
-  height: 6em;
-  padding: 1.5em;
+.logo {
   will-change: filter;
   transition: filter 300ms;
-} */
+}
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.vanilla:hover {
   filter: drop-shadow(0 0 2em #f7df1eaa);
 }
 
-#watch-list,
-#favorites,
-#liked-movies {
+.watch-list {
+  display: flex;
+  color: #fff;
+  gap: 8px;
+}
+
+#favorites {
   margin: 8px;
   background-color: #060606;
   border: 1px solid #fff;
   position: relative;
-  display: flex;
   align-items: flex-start;
+}
+
+#liked-movies {
+  display: flex;
+  margin: 8px;
+  background-color: #06060627;
+  border: 1px solid #fff;
+  gap: 10px;
 }
 
 #overlay {
   background-color: transparent;
   padding: 0 1em;
   color: #fff;
-  position: absolute;
-  bottom: 24px;
   font-weight: lighter;
   display: flex;
   flex-direction: column;
@@ -207,7 +209,7 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 1em 2em;
-  font-size: 0.5em;
+  font-size: 16px;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -239,13 +241,19 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.movie-card {
+  width: 200px;
+  height: 300px;
+}
+
 img {
-  width: 100%;
+  width: 20vw;
   z-index: -1;
 }
 
 #hero-section {
   width: 100%;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   gap: 1em;
@@ -279,8 +287,6 @@ img {
 }
 
 #poster-images {
-  width: 200px;
-  height: 300px;
   display: flex;
   margin: 0;
   position: relative;
@@ -290,7 +296,16 @@ img {
 #movies {
   display: flex;
   flex-direction: column;
+  gap: 3rem;
   width: 100%;
+  margin: 1rem 0;
+}
+
+.content {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 #search-btn {
@@ -306,4 +321,8 @@ img {
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+
+h3 {
+  font-size: 12px;
 }
