added slider css style  and javascript functionality to the project

--- a/src/style.css
+++ b/src/style.css
@@ -28,301 +28,246 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+* {
   margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Mulish", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  background-color: #181515;
+  color: white;
+}
+
+.search {
+  width: max-content;
   display: flex;
-  justify-content: center;
   align-items: center;
-  color: #000;
-  font-family: sans-serif;
-  /* min-width: 320px;
-  min-height: 100vh; */
-  width: 100%;
+  width: 25px;
+  height: 25px;
+  transition: box-shadow 0.25s;
+}
+
+.searchboxbar {
+  display: flex;
+  align-items: center;
+  background: #333;
+  padding: 0.5em 2em;
+  justify-content: space-between;
+  border-radius: 40px;
+  transition: 0.3sec;
+}
+
+.searchboxbar input {
+  margin-left: 20px;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1.2rem;
+  display: none;
+}
+
+.search:focus-within {
+  box-shadow: 0 0 2px #000000bf;
+  width: 300px;
+}
+
+.Search-icon {
+  color: #40d761;
 }
 
 header {
-  width: 100%;
-  padding: 1em 0;
-  /* border: 1px solid red; */
-}
-
-.nav-bar {
-  width: 95%;
-  margin: auto;
-  height: 40px;
-  padding: 1em 0.5em;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  /* border: 1px solid green; */
-}
-
-.account-icon {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.search-image,
-.account-image,
-.notify-image,
-.arrow-image {
-  width: 24px;
-  height: 24px;
-}
-
-.search-icon {
-  border: none;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  position: fixed;
+  top: 0;
+  background: transparent;
   width: 100%;
-}
-
-.menu,
-.arrow-down {
-  display: none;
-  align-items: center;
-  justify-content: center;
-  gap: 1.3rem;
 }
 
 .logo {
   display: flex;
-  align-items: center;
-  gap: 4px;
+  gap: 7px;
+  padding: 10px;
 }
 
 .logo-name {
-  width: 80px;
-  height: 30px;
-}
-
-.logo-image {
-  width: 32px;
-  height: 32px;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  width: 100%;
-  text-align: center;
+  font-weight: 700;
+  font-size: 1.5rem;
+  color: #40d761;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+}
+.noti img {
+width: 15px;
+padding: 10px;
+background: transparent;
+width: 25px;
+height: 25px;
+border-radius: 60px;
+margin: 10px;
+}
+
+form {
+  display: flex;
+  border: 1px solid;
+  border-radius: 24px;
   align-items: center;
 }
 
-.logo {
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.watch-list {
-  display: flex;
-  color: #fff;
-  gap: 8px;
-}
-
-#favorites {
-  margin: 8px;
-  background-color: #060606;
-  border: 1px solid #fff;
-  position: relative;
-  align-items: flex-start;
-}
-
-#liked-movies {
-  display: flex;
-  margin: 8px;
-  background-color: #06060627;
-  border: 1px solid #fff;
-  gap: 10px;
-}
-
-#overlay {
-  background-color: transparent;
-  padding: 0 1em;
-  color: #fff;
-  font-weight: lighter;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 8px;
-}
-
-.search-bar {
-  width: 100%;
-  height: 40px;
-  padding: 1em;
+.navbar {
   display: none;
-  align-items: center;
+}
+
+.mySlides {
+  display: none;
+  opacity: 0.5;
+  height: 400px;
+}
+
+.slider-container {
+  width: 80%;
+  display: flex;
   justify-content: center;
+  max-width: 600px;
+  position: relative;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px #0000004d;
 }
 
-.heading-three-item {
-  text-align: left;
-  font-size: 1.1rem;
-}
-
-.para-one {
-  text-align: left;
-  font-size: 0.5em;
-  color: #cec6c6;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-#input-field {
-  border: none;
-  outline: none;
-  transition: border-color 0.25s;
-  outline: none;
-  padding: 10px;
-  background-color: transparent;
-}
-
-/* #input-field:hover {
-  border-color: #646cff;
-}
-
-#input-field:focus,
-#input-field:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 1em 2em;
-  font-size: 16px;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-.buttons {
+.slides {
   display: flex;
-  align-items: center;
-  gap: 2em;
-}
-
-#cta {
-  border-radius: none;
-  background-color: #048404;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.movie-card {
-  width: 200px;
-  height: 300px;
-}
-
-img {
-  width: 20vw;
-  z-index: -1;
-}
-
-#hero-section {
   width: 100%;
-  height: 60vh;
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
+  transition: transform 0.5s;
+}
+
+.slide { 
+  width: 100%;
+  flex-shrink: 0;
+}
+
+.slide img {
+  width: 100%;
+  display: block;
+  opacity: 0.6;
+  height: 540px;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+section {
+margin: 2rem;
 }
 
 .dots {
-  height: 8px;
-  width: 8px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+height: 8px;
+width: 8px;
+margin: 0 2px;
+background-color: #bbb;
+border-radius: 50%;
+display: inline-block;
+transition: background-color 0.6s ease;
 }
 
 .active {
-  background-color: #717171;
+background-color: #717171;
 }
 
-#overlay-main {
-  width: 100%;
-  display: flex;
-  animation-name: fade;
-  animation-duration: 1.5s;
+.popular-release {
+margin: 2rem 1em;
+display: flex;
+flex-direction: column;
+gap: 1rem;
 }
 
-#posters {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+.new-popular-wrapper {
+display: flex;
+align-items: center;
+gap: 2rem;
 }
 
-#poster-images {
+.new-popular-item {
   display: flex;
-  margin: 0;
+  align-items: center;
+  gap: 1rem;
+}
+
+.release-overview {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  position: absolute;
+  bottom: 24px;
+}
+
+.poster-img {
+  width: 100px;
+  height: 100px;
+  border-radius: 16px;
+}
+
+img {
+width: 100%;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.number {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.img-release-wrap {
+  width: 200px;
+  height: 300px;
+  background-color: #0000006e;
   position: relative;
-  background-color: #000000bf;
 }
 
-#movies {
+.movie-release-poster {
+  z-index: -1; 
+  border-radius: 16px; 
+}
+
+.movie-release-overview {
+position: absolute;
+bottom: 12px;
+}
+
+#new-release {
+display: block;
+margin: 1rem 0;
+display: flex;
+flex-direction: column;
+gap: 1.5rem;
+margin: 2em 1em;
+}
+
+
+.release-content-wrap {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
-  width: 100%;
-  margin: 1rem 0;
+  gap: 2rem;
 }
 
-.content {
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
+@media screen and (min-width: 768px) {
+  .navbar {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      color: #fff;
+  }
 
-#search-btn {
-  display: none;
-  align-items: center;
-  gap: 10px;
-  border: 1px solid #e3e3e3;
-  padding: 0.5em;
-  border-radius: 24px;
-}
-
-.icon-bar {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-h3 {
-  font-size: 12px;
+  .navbar:hover {
+      color: #008000;
+  }
+  
 }
