--- a/src/main.css
+++ b/src/main.css
@@ -4,224 +4,26 @@
   padding: 0;
 }
 
-.search-btn {
-  background-color: transparent;
-  border: none;
-  outline: none;
-}
-
-.myFavorites {
-  display: flex;
-  width: 100%;
-}
-
-.hero-image,
-.hero-image-two,
-.hero-image-three,
-.hero-image-four {
-  width: 250px;
-  height: 300px;
-  margin: 10px;
-  border: 1px solid #fff;
-}
-
-.movies {
-  width: 40%;
-  padding: 4px;
-  border-radius: 24px;
-  background-color: #000;
-  color: #fff;
-  border: none;
-  z-index: 1;
-}
-
-.week-popular {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-}
-
-.carousel-images {
-  /* overflow: hidden; */
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  position: relative;
-}
-
-.cattii-i {
-  display: flex;
-  gap: 10px;
-}
-
-.cattii-img img {
-  width: 100px;
-  border-radius: 15px;
-}
-
-.num {
-  padding-top: 18%;
-  font-size: 2rem;
-  font-weight: 800;
-  padding-right: 10px;
-}
-
-.cattii-t h4 {
-  margin-top: 10px;
-  font-size: 1rem;
-}
-
-.supp p {
-  margin-top: 10px;
-  font-weight: 300;
-  color: #ffffffa2;
-}
-
-.cattii-t p {
-  margin-top: 10px;
-}
-
-.pg {
-  padding: 10px;
-  border: 1px black solid;
-  width: 50px;
-  border-radius: 15px;
-}
-
-.third-catt {
-  display: flex;
-  gap: 1rem;
-  overflow: hidden;
-}
-
-.img-cattiv img {
-  width: 220px;
-  border-radius: 15px;
-  opacity: 0.7;
-}
-
-.just {
-  padding: 20px;
-  margin-top: 30px;
-  color: #40d761;
-}
-
-h2 {
-  color: #fff;
-  font-weight: 700;
-  font-size: 1.2rem;
-  text-align: left;
+.hero-section {
+  margin: 0;
 }
 
 .brand-logos {
   width: 100%;
   display: block;
+  margin: 32px 16px;
 }
 
 .logo-slider {
   display: flex;
   align-items: center;
-  gap: 1rem;
-  margin: 32px 12px;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .logos {
   width: 5rem;
   height: auto;
-}
-
-#cards {
-  width: 100%;
-  display: flex;
-}
-
-.paragraph-one {
-  width: 90%;
-  color: #f3f1f1e5;
-  font-weight: 200;
-  text-align: left;
-}
-
-.overlay-position {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  padding: 0 2em;
-}
-
-.carousel {
-  transform-style: preserve-3d;
-  height: 100%;
-}
-
-.movie-poster {
-  opacity: 0;
-  top: 0;
-  width: 200px;
-  height: 200px;
-  margin: auto;
-  transition: transform 0.5s, opacity 0.5s, z-index 0.5s;
-}
-
-.movie-item {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-
-.movie-poster.first-image,
-.movie-poster.active {
-  opacity: 1;
-  position: relative;
-  /* z-index: 900; */
-}
-
-.carousel-photo.prev,
-.carousel-photo.next {
-  z-index: 800;
-}
-.carousel-photo.prev {
-  transform: translateX(-100%); /* Move 'prev' item to the left */
-}
-.carousel-photo.next {
-  transform: translateX(100%); /* Move 'next' item to the right */
-}
-
-.carousel-button-prev,
-.carousel-button-next {
-  position: absolute;
-  top: 50%;
-  width: 3rem;
-  height: 3rem;
-  background-color: #fff;
-  transform: translateY(-50%);
-  border-radius: 50%;
-  cursor: pointer;
-  z-index: 1001;
-  border: 1px solid black;
-}
-.carousel-button-prev {
-  left: 0;
-}
-.carousel-button-next {
-  right: 0;
-}
-.carousel-button-prev::after,
-.carousel-button-next::after {
-  content: " ";
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  top: 50%;
-  left: 54%;
-  border-right: 2px solid black;
-  border-bottom: 2px solid black;
-  transform: translate(-50%, -50%) rotate(135deg);
-}
-.carousel-button-next::after {
-  left: 47%;
-  transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 footer {
@@ -234,6 +36,8 @@ footer {
   color: #fff;
   font-size: 12px;
   padding: 10px;
+  margin-top: 3rem;
+  background-color: #000;
 }
 
 .unordered-list {
@@ -246,6 +50,7 @@ footer {
   display: flex;
   gap: 10px;
 }
+
 
 .footer-item-one {
   width: 50%;
@@ -262,10 +67,12 @@ footer {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
+  gap: 3rem;
 }
 
 .footer {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -279,6 +86,13 @@ footer {
   padding: 10px;
   display: flex;
   justify-content: space-between;
+}
+
+.item-wrapper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 @media (prefers-color-scheme: light) {
