--- a/src/main.css
+++ b/src/main.css
@@ -1,34 +1,13 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 
-.hero-section {
-  margin: 0;
-}
 
-.brand-logos {
-  width: 100%;
-  display: block;
-  margin: 32px 16px;
-}
-
-.logo-slider {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 100%;
-}
-
-.logos {
-  width: 5rem;
-  height: auto;
+.logo-item {
+  background-color: black;
+  padding: 10px;
+  border-radius: 8px;
 }
 
 footer {
   width: 100%;
-  height: 40vh;
   border: 1px solid #f3f1f1e5;
   display: flex;
   flex-direction: column;
@@ -88,21 +67,16 @@ footer {
   justify-content: space-between;
 }
 
-.item-wrapper {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
