added new api fetch for likes section

--- a/src/style.css
+++ b/src/style.css
@@ -331,6 +331,11 @@ button {
   position: absolute;
 }
 
+/* Just Release Section */
+/* .just-release-wrapper {
+  
+} */
+
 /* Watchlist section */
 
 .item-wrapper,
