--- a/src/main.css
+++ b/src/main.css
@@ -1,14 +1,15 @@
-
-
 .logo-item {
   background-color: black;
   padding: 10px;
   border-radius: 8px;
 }
 
+hr {
+  border-top: 0.1px solid #b4b3b38c;
+}
+
 footer {
   width: 100%;
-  border: 1px solid #f3f1f1e5;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -65,6 +66,43 @@ footer {
   padding: 10px;
   display: flex;
   justify-content: space-between;
+}
+
+/* details page styles */
+.info-title {
+  color: var(--white);
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.movie-info-description {
+  color: grey;
+  margin-bottom: 1.5rem;
+}
+
+
+.cast-card {
+  display: flex;
+  width: 240px;
+  gap: 8px;
+
+  .cast-profile-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .cast-role {
+    font-size: 14px;
+    color: var(--white);
+    margin-bottom: 4px;
+  }
+
+  .cast-name {
+    font-size: 12px;
+    color: #ffffff73;
+  }
 }
 
 @media (prefers-color-scheme: light) {
