commiting new changes to the project the details page

--- a/src/main.css
+++ b/src/main.css
@@ -105,17 +105,16 @@ footer {
   }
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+#swiper-button-next,
+#swiper-button-prev {
+  width: 16px;
+  height: 16px;
+}
 
-  a:hover {
-    color: #747bff;
-  }
+a {
+  color: #fff;
+}
 
-  button {
-    background-color: #f9f9f9;
-  }
+a:hover {
+  color: #ffa600;
 }
