--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,7 @@ body {
   width: min(1248px, 100%);
   margin: 0 auto;
   padding: 1rem;
+  display: block;
   /* overflow: hidden; */
 }
 
@@ -124,18 +125,20 @@ input[type="search"]:focus {
   background-color: var(--primary-color);
 }
 
-.slide-banner {
-  background-image: url("/assets/img/mandalorian\ bg.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 100%;
-  height: 100dvh;
+#slider {
   display: flex;
-  align-items: end;
-  position: relative;
+  transition: transform 1s ease-in-out;
+  width: 100%;
+  height: 70%;
 }
 
-.slide-banner::before {
+#slider img {
+  width: 100%;
+  height: 100%;
+}
+
+
+#slider::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -150,6 +153,9 @@ input[type="search"]:focus {
 
 .movie-info {
   width: 600px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 
   .movie-tag {
     background-color: var(--bg-color);
@@ -266,11 +272,17 @@ button {
   bottom: 24px;
 }
 
+.image-popular-release {
+  width: 200px;
+  height: 100px;
+}
+
 .poster-img {
-  width: 80px;
+  width: 200px;
   height: 100px;
   border-radius: 16px;
   object-fit: cover;
+  object-position: center;
 }
 
 .pg-age {
@@ -319,7 +331,6 @@ button {
   height: 350px;
   border-radius: 1rem;
   position: relative;
-  overflow: hidden;
 }
 
 .just-release-wrapper::before {
@@ -341,20 +352,37 @@ button {
 /* Just Release Section */
 .just-release-wrapper {
   width: 300px;
-  height: 400px;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(20, 300px);
+  margin-bottom: 3rem;
+  gap: 1rem;
+}
+
+.movie-poster-one {
+  border-radius: 1rem;
+  position: relative;
+}
+
+.movie-poster-one::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(1, 4, 2, 1) 0%, rgba(0, 212, 255, 0) 100%);
+  z-index: 0;
 }
 
 /* Watchlist section */
-
 .item-wrapper,
 .item-wrapper-one {
+
   /* width: 100%; */
   display: grid;
   grid-template-columns: repeat(20, 300px);
+
   /* overflow-y: hidden; */
-  overflow: hidden;
+  /* overflow: hidden; */
   gap: 1rem;
 }
 
