--- a/src/style.css
+++ b/src/style.css
@@ -106,6 +106,7 @@ form input {
   font-weight: 400;
   font-family: inherit;
   border: none;
+  color: #fff;
   line-height: 1.5;
   background-color: transparent;
   width: 100%;
@@ -125,67 +126,99 @@ input[type="search"]:focus {
   background-color: var(--primary-color);
 }
 
-#slider {
+#hero-section {
   display: flex;
   transition: transform 1s ease-in-out;
-  width: 100%;
-  height: 70%;
-}
-
-#slider img {
   width: 100%;
   height: 100%;
 }
 
+#hero-section img {
+  width: 100%;
+  height: 100%;
+}
 
-#slider::before {
+#hero-section::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 100%;
+  bottom: -150px;
   background: linear-gradient(0deg, rgba(1, 4, 2, 1) 0%, rgba(0, 212, 255, 0) 100%);
 }
 
-.swiper-container {
-  margin-bottom: 2rem;
-  z-index: 10;
+.swiper {
+  width: 100%;
+  min-height: 300px;
+  height: fit-content;
+  max-height: 60vh;
+  margin-bottom: 3rem;
 }
 
-.movie-info {
-  width: 600px;
+.swiper-wrapper {
+  display: grid;
+  grid-template-columns: repeat(20, 300px);
+  margin-left: -260px;
+}
+
+#just-release .released-movies::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 60%;
+  bottom: 0;
+  background: linear-gradient(0deg, rgba(1, 4, 2, 1) 0%, rgba(0, 212, 255, 0) 100%);
+  z-index: 1;
+}
+
+#swiper-wrapper-1 .swiper-slide {
+  height: 400px;
+  position: relative;
+}
+
+#swiper-wrapper-hero {
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+
+.hero-movie-poster {
+  object-fit: contain;
+}
+
+/* #swiper-wrapper-hero::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 60%;
+  bottom: 0;
+  background: linear-gradient(0deg, rgba(1, 4, 2, 1) 0%, rgba(0, 212, 255, 0) 100%);
+  z-index: 1;
+} */
+
+.swiper-slide {
+  font-size: 18px;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  text-align: center;
+  justify-content: left;
+  align-items: center;
+  width: 100%;
+  height: 80vh;
+  z-index: 10;
+  color: var(--title-color);
+  object-fit: cover;
+}
 
-  .movie-tag {
-    background-color: var(--bg-color);
-    color: var(--title-color);
-    border-radius: 20px;
-    padding-block: 8px;
-    padding-inline: 12px;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.2;
-    text-transform: capitalize;
-  }
+#just-release .movie-paragraph {
+  position: absolute;
+  top: 330px;
+  z-index: 1000;
+  color: #fff;
+}
 
-  .movie-title {
-    font-size: 2rem;
-    color: var(--title-color);
-    letter-spacing: -2px;
-    margin-top: 1rem;
-  }
-
-  .movie-meta {
-    font-size: 14px;
-    color: var(--body-text);
-    margin-block: .75rem;
-  }
-
-  .movie-discription {
-    color: var(--title-color);
-    margin-bottom: 1rem;
-  }
+.swiper-container {
+  z-index: 10;
 }
 
 div.cta {
@@ -248,7 +281,7 @@ button {
 /* New Pupolar release */
 
 .popular-release {
-  margin: 2rem 1em;
+  margin: 0 1em;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -264,18 +297,24 @@ button {
   gap: 1rem;
 }
 
+#just-release>.released-movies {
+  height: 500px;
+}
+
 .release-overview {
   display: flex;
   flex-direction: column;
   gap: 4px;
   position: absolute;
   bottom: 24px;
+  text-align: left;
 }
 
 .image-popular-release {
   width: 200px;
   height: 100px;
 }
+
 
 .poster-img {
   width: 200px;
@@ -324,6 +363,7 @@ button {
   color: var(--title-color);
   font-weight: 700;
   margin-bottom: 1rem;
+  margin-inline: 32px;
 }
 
 .just-release-wrapper {
@@ -354,14 +394,33 @@ button {
   width: 300px;
   height: 100%;
   display: grid;
-  grid-template-columns: repeat(20, 300px);
-  margin-bottom: 3rem;
   gap: 1rem;
 }
+
+.movie-poster {
+  border-radius: 1rem;
+  position: relative;
+  width: 280px;
+  height: 400px;
+  object-fit: cover;
+}
+
+.movie-poster::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(1, 4, 2, 1) 0%, rgba(0, 212, 255, 0) 100%);
+  z-index: 0;
+}
+
 
 .movie-poster-one {
   border-radius: 1rem;
   position: relative;
+  width: 280px;
+  height: 280px;
+  object-fit: cover;
 }
 
 .movie-poster-one::before {
@@ -374,45 +433,26 @@ button {
 }
 
 /* Watchlist section */
-.item-wrapper,
-.item-wrapper-one {
 
-  /* width: 100%; */
-  display: grid;
-  grid-template-columns: repeat(20, 300px);
-
-  /* overflow-y: hidden; */
-  /* overflow: hidden; */
-  gap: 1rem;
+.poster-img:hover {
+  transform: scale(1.1);
 }
 
-.movie-card {
-  width: 300px;
-  height: 300px;
-  /* margin: 24px 0; */
+.released-movies:hover {
+  transform: scale(1.1);
 }
 
-.movie-poster {
-  width: 300px;
-  height: 200px;
-  object-fit: cover;
-  object-position: 100% -50px;
-  border-radius: 1rem;
+.movie-poster-one:hover {
+  transform: scale(1.1);
 }
-
-.watchlist-movie-title {
-  font-size: 1.25rem;
-  letter-spacing: -1px;
-}
-
-.movie-paragraph {
-  font-size: 14px;
-}
-
 
 a {
   color: #fff;
   text-decoration: none;
+}
+
+a:hover {
+  color: var(--green-9);
 }
 
 .heading-three-footer {
@@ -450,7 +490,7 @@ a {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  margin: 2em 1em;
+  margin: 1em;
 }
 
 
@@ -466,10 +506,6 @@ a {
     align-items: center;
     gap: 1rem;
     color: #fff;
-  }
-
-  .navbar:hover {
-    color: #008000;
   }
 
 }
