--- a/src/main.css
+++ b/src/main.css
@@ -1,83 +1,36 @@
-.logo-item {
-  background-color: black;
-  padding: 10px;
-  border-radius: 8px;
-}
-
-hr {
-  border-top: 0.1px solid #b4b3b38c;
-}
-
-footer {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: #fff;
-  font-size: 12px;
-  padding: 10px;
-  margin-top: 3rem;
-  background-color: #000;
-}
-
-.unordered-list {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.links {
-  display: flex;
-  gap: 10px;
-}
-
-
-.footer-item-one {
-  width: 50%;
-  text-align: left;
-}
-
-.social-media-icon {
-  width: 24px;
-  height: 24px;
-}
-
-.footer-item-two {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-end;
-  gap: 3rem;
-}
-
-.footer {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  margin: 1rem 0;
-}
-
-.contact-footer {
-  width: 100%;
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-}
-
 /* details page styles */
+
 .info-title {
   color: var(--white);
   font-size: 1rem;
   margin-bottom: 1rem;
 }
 
+.movie-details-2 {
+  margin-block: 3em;
+  padding-block: 1em;
+}
+
+.movie-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .movie-info-description {
   color: grey;
   margin-bottom: 1.5rem;
+}
+
+.movie-discription {
+  width: 45%;
+}
+
+.details-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
 
@@ -107,6 +60,6 @@ footer {
 
 #swiper-button-next,
 #swiper-button-prev {
-  width: 16px;
-  height: 16px;
+  width: 24px;
+  height: 24px;
 }
