--- a/src/style.css
+++ b/src/style.css
@@ -73,7 +73,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  z-index: 1;
+  z-index: 100;
   position: sticky;
   margin-bottom: -80px;
 }
@@ -83,34 +83,12 @@ img {
   align-items: center;
 }
 
-nav ul {
-  list-style-type: none;
-  display: inline-flex;
-  gap: 1rem;
-  font-weight: 500;
+.navbar {
+  display: none;
 }
 
 .search-form {
-  display: inline-flex;
-  justify-content: space-between;
-  background-color: var(--gray-4);
-  padding: 0.5rem;
-  border-radius: 999px;
-  width: 400px;
-}
-
-form input {
-  padding: 0.25rem;
-  margin-left: 0.5rem;
-  font-size: 1rem;
-  font-weight: 400;
-  font-family: inherit;
-  border: none;
-  color: #fff;
-  line-height: 1.5;
-  background-color: transparent;
-  width: 100%;
-  caret-color: var(--green-12);
+  display: none;
 }
 
 input[type="search"]:focus {
@@ -126,14 +104,15 @@ input[type="search"]:focus {
   background-color: var(--primary-color);
 }
 
-#hero-section {
+#hero {
   display: flex;
   transition: transform 1s ease-in-out;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  margin-bottom: 3rem;
 }
 
-#hero-section img {
+#hero img {
   width: 100%;
   height: 100%;
 }
@@ -186,15 +165,6 @@ input[type="search"]:focus {
   object-fit: contain;
 }
 
-/* #swiper-wrapper-hero::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 60%;
-  bottom: 0;
-  background: linear-gradient(0deg, rgba(1, 4, 2, 1) 0%, rgba(0, 212, 255, 0) 100%);
-  z-index: 1;
-} */
 
 .swiper-slide {
   font-size: 18px;
@@ -204,7 +174,7 @@ input[type="search"]:focus {
   justify-content: left;
   align-items: center;
   width: 100%;
-  height: 80vh;
+  height: 100%;
   z-index: 10;
   color: var(--title-color);
   object-fit: cover;
@@ -227,15 +197,23 @@ div.cta {
   margin-top: .5rem;
 }
 
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
 button {
   font-size: 1rem;
   font-weight: 500;
-  padding-block: 1rem;
+  padding-block: 0.75rem;
   padding-inline: 1.5rem;
   font-family: var(--ft-mulish);
   border-radius: .5rem;
   outline: none;
   border: none;
+  cursor: pointer;
 }
 
 .primary-cta {
@@ -259,6 +237,10 @@ button {
   display: flex;
   align-items: center;
   gap: 0.5em;
+}
+
+i {
+  font-size: 24px;
 }
 
 /* Brand logos styles */
@@ -423,6 +405,7 @@ button {
   object-fit: cover;
 }
 
+
 .movie-poster-one::before {
   content: "";
   position: absolute;
@@ -449,6 +432,9 @@ button {
 a {
   color: #fff;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 a:hover {
@@ -456,8 +442,8 @@ a:hover {
 }
 
 .heading-three-footer {
-  font-size: 2rem;
-  width: 60%;
+  font-size: 1.1rem;
+  width: 100%;
 }
 
 .number {
@@ -500,7 +486,77 @@ a:hover {
   gap: 2rem;
 }
 
-@media screen and (min-width: 768px) {
+.logo-item {
+  background-color: black;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+hr {
+  border-top: 0.1px solid #b4b3b38c;
+}
+
+footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: #fff;
+  font-size: 12px;
+  padding: 10px;
+  margin-top: 3rem;
+  background-color: #000;
+}
+
+.unordered-list {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.links {
+  display: flex;
+  gap: 10px;
+}
+
+
+.footer-item-one {
+  width: 50%;
+  text-align: left;
+}
+
+.social-media-icon {
+  width: 24px;
+  height: 24px;
+}
+
+.footer-item-two {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 3rem;
+}
+
+.footer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin: 1rem 0;
+}
+
+.contact-footer {
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 480px) {
   .navbar {
     display: flex;
     align-items: center;
@@ -508,4 +564,45 @@ a:hover {
     color: #fff;
   }
 
+  nav ul {
+    list-style-type: none;
+    display: inline-flex;
+    gap: 1rem;
+    font-weight: 500;
+  }
+}
+
+@media screen and (min-width: 768px) {
+
+  .search-form {
+    display: inline-flex;
+    justify-content: space-between;
+    background-color: var(--gray-4);
+    padding: 0.5rem;
+    border-radius: 999px;
+    width: 35vw;
+  }
+
+  form input {
+    padding: 0.25rem;
+    margin-left: 0.5rem;
+    font-size: 1rem;
+    font-weight: 400;
+    font-family: inherit;
+    border: none;
+    color: #fff;
+    line-height: 1.5;
+    background-color: transparent;
+    width: 100%;
+    caret-color: var(--green-12);
+  }
+
+
+}
+
+@media screen and (min-width: 1024px) {
+  .heading-three-footer {
+    font-size: 2rem;
+    width: 60%;
+  }
 }
