--- a/src/main.css
+++ b/src/main.css
@@ -33,6 +33,55 @@
   gap: 1rem;
 }
 
+.movie-banner {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: 10% 25%;
+  background-size: cover;
+  /* aspect-ratio: 16 / 9; */
+}
+
+.back {
+  width: 600px;
+  position: absolute;
+  bottom: 60px;
+
+  .movie-tag {
+    background-color: #000;
+    color: var(--title-color);
+    border-radius: 2rem;
+    display: inline;
+    padding-inline: 1rem;
+    padding-block: 0.5rem;
+    font-weight: 500;
+    text-align: left;
+  }
+
+  .release_date {
+    font-size: 3rem;
+    color: var(--title-color);
+    letter-spacing: -2px;
+    margin-block: 1rem;
+    font-family: var(--ft-mulish);
+    text-align: left;
+  }
+
+  .movie_gens {
+    color: var(--body-text);
+    text-align: left;
+  }
+
+  .overview {
+    color: var(--body-text);
+    margin-block: 16px;
+    font-family: var(--ft-mulish);
+    font-size: 1rem;
+    text-align: left;
+  }
+}
+
 
 .cast-card {
   display: flex;
@@ -58,8 +107,24 @@
   }
 }
 
-#swiper-button-next,
-#swiper-button-prev {
-  width: 24px;
-  height: 24px;
+/* logo carousel here */
+.logo-carousel {
+  display: flex;
+  overflow: hidden;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+.logo-item {
+  flex: 0 0 auto;
+  width: 150px;
+  height: auto;
+}
+
+.logo-item img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
 }
