--- a/src/style.css
+++ b/src/style.css
@@ -108,7 +108,6 @@ input[type="search"]:focus {
   display: flex;
   transition: transform 1s ease-in-out;
   width: 100%;
-  height: 100vh;
   margin-bottom: 3rem;
 }
 
@@ -123,14 +122,13 @@ input[type="search"]:focus {
   width: 100%;
   height: 100%;
   bottom: -150px;
+  z-index: -100;
   background: linear-gradient(0deg, rgba(1, 4, 2, 1) 0%, rgba(0, 212, 255, 0) 100%);
 }
 
 .swiper {
   width: 100%;
-  min-height: 300px;
   height: fit-content;
-  max-height: 60vh;
   margin-bottom: 3rem;
 }
 
@@ -144,8 +142,9 @@ input[type="search"]:focus {
   content: "";
   position: absolute;
   width: 100%;
-  height: 60%;
+  height: 20%;
   bottom: 0;
+  margin-left: -40px;
   background: linear-gradient(0deg, rgba(1, 4, 2, 1) 0%, rgba(0, 212, 255, 0) 100%);
   z-index: 1;
 }
@@ -173,18 +172,28 @@ input[type="search"]:focus {
   text-align: center;
   justify-content: left;
   align-items: center;
-  width: 100%;
+  width: 60%;
   height: 100%;
   z-index: 10;
   color: var(--title-color);
   object-fit: cover;
 }
 
-#just-release .movie-paragraph {
+#just-release .movie-title {
   position: absolute;
-  top: 330px;
+  top: 335px;
   z-index: 1000;
   color: #fff;
+  font-weight: 700;
+  font-size: 1.1rem;
+}
+
+#just-release .movie-paragraph {
+  position: absolute;
+  top: 360px;
+  z-index: 1000;
+  color: #fff;
+  font-weight: 200;
 }
 
 .swiper-container {
@@ -244,6 +253,14 @@ i {
 }
 
 /* Brand logos styles */
+#brand-logos {
+  width: 100%;
+}
+
+#override-swiper-wrapper {
+  margin: 0;
+  display: flex;
+}
 
 .logo-slider {
   display: grid;
@@ -260,6 +277,18 @@ i {
   border: 1px solid var(--gray-4);
 }
 
+#slide-img-wrap,
+#slide-img-wrap-1,
+#slide-img-wrap-2,
+#slide-img-wrap-3,
+#slide-img-wrap-4,
+#slide-img-wrap-5,
+#slide-img-wrap-6,
+#slide-img-wrap-7,
+#slide-img-wrap8 {
+  width: 100%;
+}
+
 /* New Pupolar release */
 
 .popular-release {
@@ -271,6 +300,8 @@ i {
 
 .new-popular-wrapper {
   display: flex;
+  gap: 2rem;
+  flex-direction: column;
 }
 
 .new-popular-item {
@@ -604,5 +635,10 @@ footer {
   .heading-three-footer {
     font-size: 2rem;
     width: 60%;
+  }
+
+  .new-popular-wrapper {
+    flex-direction: row;
+    padding-inline: 1rem;
   }
 }
