--- a/src/style.css
+++ b/src/style.css
@@ -164,20 +164,78 @@ input[type="search"]:focus {
   object-fit: contain;
 }
 
+#swiper-item {
+  width: 100%;
+  height: 80vh;
+  display: block;
+  overflow: hidden;
+}
+
+#slider {
+  display: flex;
+  position: relative;
+
+}
+
+#hero-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  position: relative;
+}
+
+#hero-paragraph-id {
+  width: 50%;
+}
+
+#hero-title-id {
+  width: fit-content;
+}
+
+.hero-movie-title,
+.hero-movie-paragraph {
+  text-align: left;
+}
+
+#hero-container-item {
+  position: absolute;
+  bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  align-items: flex-start;
+  width: 65%;
+}
+
+.hero-movies-bg p {
+  width: 50%;
+  text-align: left;
+}
 
 .swiper-slide {
   font-size: 18px;
   display: flex;
   flex-direction: column;
   text-align: center;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
-  width: 60%;
+  width: 100%;
   height: 100%;
   z-index: 10;
   color: var(--title-color);
   object-fit: cover;
 }
+
+/* .swiper-slide::before {
+  content: " ";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg,
+      rgba(1, 4, 2, 1) 0%,
+      rgba(0, 212, 255, 0) 100%);
+} */
 
 #just-release .movie-title {
   position: absolute;
@@ -255,6 +313,10 @@ i {
 /* Brand logos styles */
 #brand-logos {
   width: 100%;
+}
+
+.logos {
+  width: 124px;
 }
 
 #override-swiper-wrapper {
@@ -372,7 +434,7 @@ i {
 /* Just release section */
 
 .heading {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: var(--title-color);
   font-weight: 700;
   margin-bottom: 1rem;
@@ -612,6 +674,10 @@ footer {
     padding: 0.5rem;
     border-radius: 999px;
     width: 35vw;
+  }
+
+  .heading {
+    font-size: 1.5rem;
   }
 
   form input {
