--- a/src/style.css
+++ b/src/style.css
@@ -56,9 +56,10 @@ body {
 /* Utility classes */
 .container {
   width: min(1248px, 100%);
-  margin: 0 auto;
+  margin: 0;
   padding: 1rem;
   display: block;
+
   /* overflow: hidden; */
 }
 
@@ -132,10 +133,12 @@ input[type="search"]:focus {
   margin-bottom: 3rem;
 }
 
-.swiper-wrapper {
+#swiper-wrapper-1,
+#swiper-wrapper-2,
+#swiper-wrapper-3 {
   display: grid;
   grid-template-columns: repeat(20, 300px);
-  margin-left: -260px;
+  place-items: center;
 }
 
 #just-release .released-movies::before {
@@ -205,7 +208,8 @@ input[type="search"]:focus {
   flex-direction: column;
   gap: 0.5em;
   align-items: flex-start;
-  width: 65%;
+  width: 99%;
+  z-index: 10;
 }
 
 .hero-movies-bg p {
