--- a/src/main.css
+++ b/src/main.css
@@ -148,7 +148,7 @@
   max-width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: top;
+  object-position: bottom;
 }
 
 #movie-details div {
